Add new parameter for API Filter: rename

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "none",
+            "console": "internalConsole",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
